--- a/index.html
+++ b/index.html
@@ -972,8 +972,9 @@ INPUT  →  [ SHA Blender ]  →  UNIQUE OUTPUT
 <!-- ====================================================== -->
 
 <details class="sub-collapse">
-  <summary>🔢 What is “64 hex characters”?</summary>
+  <summary>🔢 What is “64 hex character”?</summary>
   <div class="sub-card">
+    <br>
     <p>
       A SHA-256 hash is 64 characters long, using digits 0–9 and letters a–f.
       These represent 256 bits of mathematical output.
@@ -984,6 +985,7 @@ INPUT  →  [ SHA Blender ]  →  UNIQUE OUTPUT
 <details class="sub-collapse">
   <summary>📏 What are “256 bits”?</summary>
   <div class="sub-card">
+    <br>
     <p>
       “Bits” measure information.  
       256 bits is astronomically large — impossible to brute force.
@@ -994,6 +996,7 @@ INPUT  →  [ SHA Blender ]  →  UNIQUE OUTPUT
 <details class="sub-collapse">
   <summary>⚙️ What is SHA-256?</summary>
   <div class="sub-card">
+    <br>
     <p>
       SHA-256 is the most widely trusted secure hash in government, banking,  
       healthcare, cybersecurity, and NOVAK.
