--- a/index.html
+++ b/index.html
@@ -1828,7 +1828,7 @@ async function startAvalanche() {
 
   
   <textarea id="novakInput"
-    placeholder="Example: VA claim, invoice, VIN, contract, JSON, SQL, XML..."
+    placeholder="Enter Datat here, such as TEST.  Example: VA claim, invoice, VIN, contract, JSON, SQL, XML..."
     style="width:100%; height:170px; margin-top:16px; font-family:'JetBrains Mono', monospace;
            font-size:14px; padding:12px;"></textarea>
 
