--- a/index.html
+++ b/index.html
@@ -3836,12 +3836,16 @@ async function getCanonicalAudioHash() {
 function toggleAutoVerify() {
   const enabled = document.getElementById('autoVerifyToggle').checked;
 
-  document.getElementById('autoVerifyBlock').style.display = enabled ? 'block' : 'none';
-  document.getElementById('rgacWrapper').style.display        = enabled ? 'block' : 'none';
-  document.getElementById('receiptWrapper').style.display     = enabled ? 'block' : 'none';
+  // Show / hide the three blocks
+  document.getElementById('autoVerifyBlock').style.display   = enabled ? 'block' : 'none';
+  document.getElementById('rgacWrapper').style.display       = enabled ? 'block' : 'none';
+  document.getElementById('receiptWrapper').style.display    = enabled ? 'block' : 'none';
 
-  document.getElementById('autoVerifyStatus').textContent = 
-    enabled ? "Auto-verification is enabled." : "Auto-verification is disabled.";
+  // Update status text
+  const status = document.getElementById('autoVerifyStatus');
+  status.textContent = enabled
+    ? "Auto-verification is enabled."
+    : "Auto-verification is disabled.";
 }
 
 function setDriftStatus(isDrift) {
