--- a/index.html
+++ b/index.html
@@ -1869,6 +1869,17 @@ async function startAvalanche() {
   </div>
 </div>
 
+<!-- ============================================== -->
+<!-- 🌐 UNIFIED CENTER CONTAINER (Fixes All Alignment) -->
+<!-- ============================================== -->
+<div id="novakCenter" 
+     style="
+       max-width: 820px;
+       margin-left: auto;
+       margin-right: auto;
+       width: 100%;
+     ">
+
 
 <!-- ========================================================= -->
 <!--  AUTO-VERIFICATION + RGAC + RECEIPT (CENTERED CONTAINER) -->
@@ -1990,6 +2001,7 @@ async function startAvalanche() {
   </div>
 </div>
 
+</div>
 
 <!-- =============================================== -->
 <!-- ✅ COLLAPSIBLE VERIFICATION SUITE -->
