--- a/index.html
+++ b/index.html
@@ -1853,20 +1853,23 @@ async function startAvalanche() {
             margin-left:auto; 
             margin-right:auto;">
 
-  <!-- ============================= -->
-  <!-- 🔐 CRYPTOGRAPHIC HASH OUTPUT -->
-  <!-- ============================= -->
+<!-- ============================= -->
+<!-- 🔐 CRYPTOGRAPHIC HASH OUTPUT -->
+<!-- ============================= -->
+<div class="card" style="margin-top:32px;">
+
   <h3 class="section-title" style="font-size:20px; text-align:center;">
     Cryptographic Hashes
   </h3>
 
   <div id="hashOutputList"
-       style="margin-top:10px; 
-              font-family:'JetBrains Mono', monospace; 
-              font-size:14px; 
+       style="margin-top:10px;
+              font-family:'JetBrains Mono', monospace;
+              font-size:14px;
               text-align:center;">
     <em>Waiting for input from above...</em>
   </div>
+
 </div>
 
 <!-- ============================================== -->
@@ -1880,53 +1883,36 @@ async function startAvalanche() {
        width: 100%;
      ">
 
-
 <!-- ========================================================= -->
 <!--  AUTO-VERIFICATION + RGAC + RECEIPT (CENTERED CONTAINER) -->
 <!-- ========================================================= -->
 
-<div class="card"
-     style="margin-top:32px; 
-            max-width:820px; 
-            margin-left:auto; 
-            margin-right:auto;">
+<div class="card" style="margin-top:32px;">
 
-  <label style="display:flex; 
-                align-items:center; 
-                gap:10px; 
-                font-size:16px;">
+  <label style="display:flex; align-items:center; gap:10px; font-size:16px;">
     <input type="checkbox" id="autoVerifyToggle" onchange="toggleAutoVerify()">
     <strong>Enable Proof-Before-Action Engine (NOVAK Auto-Verification)</strong>
   </label>
 
-  <p style="margin-top:6px; 
-            font-size:14px; 
-            opacity:0.8;">
-    When enabled, NOVAK automatically checks whether any change breaks integrity 
+  <p style="margin-top:6px; font-size:14px; opacity:0.8;">
+    When enabled, NOVAK automatically checks whether any change breaks integrity
     <strong>before</strong> execution.
   </p>
 
-  <!-- ============================= -->
-  <!-- 🧩 AUTO-VERIFY EXPLANATION -->
-  <!-- ============================= -->
-  <div id="autoVerifyBlock" 
-       class="card" 
-       style="margin-top:22px; 
-              padding:18px; 
-              display:none;">
+  <!-- AUTO-VERIFY EXPLANATION -->
+  <div id="autoVerifyBlock"
+       class="card"
+       style="margin-top:22px; padding:18px; display:none;">
     <h3 class="section-title" style="font-size:20px; text-align:center;">
       NOVAK Auto-Verification — Proof-Before-Action
     </h3>
-
     <p style="text-align:center;">
       Modify the text above and NOVAK instantly checks whether the new output
       still matches the last approved cryptographic truth.
     </p>
   </div>
 
-  <!-- ============================= -->
-  <!-- 🚦 DRIFT / MATCH STATUS BOX -->
-  <!-- ============================= -->
+  <!-- STATUS BOX -->
   <div id="autoVerifyStatus"
        style="margin-top:14px;
               font-family:'JetBrains Mono', monospace;
@@ -1935,25 +1921,21 @@ async function startAvalanche() {
               border-radius:8px;
               background:var(--card);
               border:1px solid var(--border);
-              transition:background .3s ease, border .3s ease, color .3s ease;
               text-align:center;">
     Auto-verification is disabled.
   </div>
 
-  <!-- ============================= -->
-  <!-- 🔗 RGAC — GLOBAL AUDIT CHAIN -->
-  <!-- ============================= -->
-  <div id="rgacWrapper" 
-       class="card" 
-       style="margin-top:22px; 
-              display:none; 
-              padding:18px;">
+  <!-- RGAC -->
+  <div id="rgacWrapper"
+       class="card"
+       style="margin-top:22px; display:none; padding:18px;">
+
     <h3 class="section-title" style="font-size:20px; text-align:center;">
       RGAC — Recursive Global Audit Chain
     </h3>
 
     <p style="margin-bottom:12px; text-align:center;">
-      In NOVAK, every approved output becomes the next input — forming a self-verifying integrity chain.
+      Each verified output becomes the next input — forming an immutable audit chain.
     </p>
 
     <div id="rgac"
@@ -1963,43 +1945,39 @@ async function startAvalanche() {
                 border-radius:6px;
                 border:1px solid var(--border);
                 background:var(--card);
-                transition:background .3s ease, border .3s ease, color .3s ease;
                 text-align:center;">
       <em>Waiting for input…</em>
     </div>
+
   </div>
 
-  <!-- ============================= -->
-  <!-- 🧾 INTEGRITY RECEIPT SECTION -->
-  <!-- ============================= -->
-  <div id="receiptWrapper" 
-       class="card" 
-       style="margin-top:32px; 
-              padding:20px; 
-              display:none;">
+  <!-- RECEIPT -->
+  <div id="receiptWrapper"
+       class="card"
+       style="margin-top:32px; padding:20px; display:none;">
+
     <h2 class="section-title" style="text-align:center;">Integrity Receipt</h2>
 
     <p style="text-align:center;">
-      NOVAK generates a tamper-proof receipt proving what existed, when, and under what rules —
-      useful for courts, claims, audits, cybersecurity, safety systems, and AI oversight.
+      NOVAK generates a tamper-proof receipt proving what existed and when.
     </p>
 
     <div style="text-align:center;">
-      <button class="action-btn" 
-              onclick="generateReceipt()" 
-              style="margin-top:12px;">
+      <button class="action-btn" onclick="generateReceipt()" style="margin-top:12px;">
         Generate Receipt
       </button>
     </div>
 
     <pre id="receiptOutput"
-         style="margin-top:16px; 
-                font-family:'JetBrains Mono', monospace; 
-                font-size:14px; 
+         style="margin-top:16px;
+                font-family:'JetBrains Mono', monospace;
+                font-size:14px;
                 white-space:pre-wrap;">
     </pre>
   </div>
+
 </div>
+
 
 </div>
 
