--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@ html[data-theme="dark"] .aud-btn.active {
 
   <!-- Audience Selector -->
   <div id="audienceNav" class="pill-row" style="margin-bottom:16px;">
-    <button id="btn-public"     class="aud-btn" onclick="setAudience('public')">🌍 Public</button>
+    <button id="btn-public" class="aud-btn active" onclick="setAudience('public')">>🌍 Public</button>
     <button id="btn-government" class="aud-btn" onclick="setAudience('government')">🏛 Government</button>
     <button id="btn-investor"   class="aud-btn" onclick="setAudience('investor')">💼 Investor</button>
     <button id="btn-cyber"      class="aud-btn" onclick="setAudience('cyber')">🛡 Cybersecurity</button>
